Address SonarCloud findings on the OID registry changes
Publish the shadowed-row set through an AtomicReference rather than a
volatile field (java:S3077, the finding that failed the quality gate on
new_reliability_rating). The value was already an immutable snapshot, so
volatile was sufficient in practice, but OidHandler publishes its two
snapshots exactly this way -- switching satisfies the rule and makes the
two classes consistent instead of arguing the false positive.

In the integration test: hoist the OID out of the assertThrows lambda so
only one call in it can throw, and stop naming a local "record", which is
a restricted identifier (java:S5778, java:S6213).

Not addressed: java:S8989 on validateExtensionMappedField, asking for
rollbackFor on AttributeEngine's class-level @Transactional. It is a false
positive here -- the validators are static, so Spring never advises them,
and validateRequestAttributeDefinitions catches AttributeException and
rethrows ValidationException, so no checked exception reaches a
transactional caller. Adding rollbackFor would change transaction
semantics for every instance method on that class.